Codigo/java2c/yacc.output
Nonterminals useless in grammar

   statement
   list_statement


Terminals unused in grammar

   QUOTE
   ELSE
   ELSEIF


Rules useless in grammar

   61 statement: if_rule
   62          | list_object
   63          | typevariable
   64          | print

   65 list_statement: statement
   66               | statement list_statement


Rules useless in parser due to conflicts

   15 start: start typeparameter

   19 list_object: object

   59 name_recursive: NAME


State 1 conflicts: 12 shift/reduce
State 10 conflicts: 1 shift/reduce, 13 reduce/reduce
State 14 conflicts: 1 shift/reduce
State 15 conflicts: 12 reduce/reduce
State 21 conflicts: 1 shift/reduce
State 23 conflicts: 12 reduce/reduce
State 26 conflicts: 12 reduce/reduce
State 32 conflicts: 1 shift/reduce, 12 reduce/reduce


Grammar

    0 $accept: start $end

    1 start: /* empty */
    2      | start list_object
    3      | start object
    4      | start print
    5      | start class
    6      | start class_content
    7      | start parameters_method_call
    8      | start method_call
    9      | start method
   10      | start if_rule
   11      | start ready_parameters_list
   12      | start typevariable
   13      | start typeparameter
   14      | start name_recursive
   15      | start typeparameter
   16      | start parameters
   17      | start parameters_list
   18      | start string

   19 list_object: object
   20            | list_object object

   21 object: NAMECLASS NAME NEW NAMECLASS ready_parameters_list DOTCOMMA

   22 print: /* empty */
   23      | SYSTEMTOK DOT OUTTOK DOT PRINTLNTOK OPARENTHESES string EPARENTHESES DOTCOMMA

   24 class: CLASS NAMECLASS OBRACKET variables class_content EBRACKET

   25 class_content: method

   26 variables: typevariable
   27          | variables typevariable

   28 if_rule: IF OPARENTHESES id COMPARATOR id EPARENTHESES OBRACKET if_content EBRACKET

   29 if_content: print

   30 id: NAME
   31   | NUMBER

   32 parameters_method_call: method_call ready_parameters_list

   33 method_call: NAME DOT NAME
   34            | NAME DOT method_call

   35 string: QUOTEDTEXT

   36 method: typeparameter ready_parameters_list OBRACKET object if_rule EBRACKET
   37       | NAME ready_parameters_list

   38 ready_parameters_list: OPARENTHESES parameters_list EPARENTHESES

   39 parameters_list: parameters
   40                | parameters_list COMMA parameters

   41 parameters: typeparameter
   42           | NAME

   43 typevariable: inttypevariable
   44             | doubletypevariable
   45             | chartypevariable
   46             | floattypevariable

   47 inttypevariable: INT NAME DOTCOMMA

   48 doubletypevariable: DOUBLE NAME DOTCOMMA

   49 chartypevariable: CHAR NAME DOTCOMMA

   50 floattypevariable: FLOAT NAME DOTCOMMA

   51 typeparameter: inttypeparameter
   52              | doubletypeparameter
   53              | chartypeparameter
   54              | floattypeparameter

   55 inttypeparameter: INT NAME

   56 doubletypeparameter: DOUBLE NAME

   57 chartypeparameter: CHAR NAME

   58 floattypeparameter: FLOAT NAME

   59 name_recursive: NAME
   60               | name_recursive COMMA NAME


Terminals, with rules where they appear

$end (0) 0
error (256)
COMPARATOR (258) 28
SYSTEMTOK (259) 23
OUTTOK (260) 23
PRINTLNTOK (261) 23
QUOTE (262)
INT (263) 47 55
DOUBLE (264) 48 56
CHAR (265) 49 57
FLOAT (266) 50 58
CLASS (267) 24
IF (268) 28
ELSE (269)
ELSEIF (270)
NEW (271) 21
NUMBER (272) 31
NAME (273) 21 30 33 34 37 42 47 48 49 50 55 56 57 58 59 60
NAMECLASS (274) 21 24
QUOTEDTEXT (275) 35
DOT (276) 23 33 34
DOTCOMMA (277) 21 23 47 48 49 50
COMMA (278) 40 60
OPARENTHESES (279) 23 28 38
EPARENTHESES (280) 23 28 38
OBRACKET (281) 24 28 36
EBRACKET (282) 24 28 36


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
start (29)
    on left: 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18, on right:
    0 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18
list_object (30)
    on left: 19 20, on right: 2 20
object (31)
    on left: 21, on right: 3 19 20 36
print (32)
    on left: 22 23, on right: 4 29
class (33)
    on left: 24, on right: 5
class_content (34)
    on left: 25, on right: 6 24
variables (35)
    on left: 26 27, on right: 24 27
if_rule (36)
    on left: 28, on right: 10 36
if_content (37)
    on left: 29, on right: 28
id (38)
    on left: 30 31, on right: 28
parameters_method_call (39)
    on left: 32, on right: 7
method_call (40)
    on left: 33 34, on right: 8 32 34
string (41)
    on left: 35, on right: 18 23
method (42)
    on left: 36 37, on right: 9 25
ready_parameters_list (43)
    on left: 38, on right: 11 21 32 36 37
parameters_list (44)
    on left: 39 40, on right: 17 38 40
parameters (45)
    on left: 41 42, on right: 16 39 40
typevariable (46)
    on left: 43 44 45 46, on right: 12 26 27
inttypevariable (47)
    on left: 47, on right: 43
doubletypevariable (48)
    on left: 48, on right: 44
chartypevariable (49)
    on left: 49, on right: 45
floattypevariable (50)
    on left: 50, on right: 46
typeparameter (51)
    on left: 51 52 53 54, on right: 13 15 36 41
inttypeparameter (52)
    on left: 55, on right: 51
doubletypeparameter (53)
    on left: 56, on right: 52
chartypeparameter (54)
    on left: 57, on right: 53
floattypeparameter (55)
    on left: 58, on right: 54
name_recursive (56)
    on left: 59 60, on right: 14 60


state 0

    0 $accept: . start $end

    $default  reduce using rule 1 (start)

    start  go to state 1


state 1

    0 $accept: start . $end
    2 start: start . list_object
    3      | start . object
    4      | start . print
    5      | start . class
    6      | start . class_content
    7      | start . parameters_method_call
    8      | start . method_call
    9      | start . method
   10      | start . if_rule
   11      | start . ready_parameters_list
   12      | start . typevariable
   13      | start . typeparameter
   14      | start . name_recursive
   15      | start . typeparameter
   16      | start . parameters
   17      | start . parameters_list
   18      | start . string

    $end          shift, and go to state 2
    SYSTEMTOK     shift, and go to state 3
    INT           shift, and go to state 4
    DOUBLE        shift, and go to state 5
    CHAR          shift, and go to state 6
    FLOAT         shift, and go to state 7
    CLASS         shift, and go to state 8
    IF            shift, and go to state 9
    NAME          shift, and go to state 10
    NAMECLASS     shift, and go to state 11
    QUOTEDTEXT    shift, and go to state 12
    OPARENTHESES  shift, and go to state 13

    $end          [reduce using rule 22 (print)]
    SYSTEMTOK     [reduce using rule 22 (print)]
    INT           [reduce using rule 22 (print)]
    DOUBLE        [reduce using rule 22 (print)]
    CHAR          [reduce using rule 22 (print)]
    FLOAT         [reduce using rule 22 (print)]
    CLASS         [reduce using rule 22 (print)]
    IF            [reduce using rule 22 (print)]
    NAME          [reduce using rule 22 (print)]
    NAMECLASS     [reduce using rule 22 (print)]
    QUOTEDTEXT    [reduce using rule 22 (print)]
    OPARENTHESES  [reduce using rule 22 (print)]

    list_object             go to state 14
    object                  go to state 15
    print                   go to state 16
    class                   go to state 17
    class_content           go to state 18
    if_rule                 go to state 19
    parameters_method_call  go to state 20
    method_call             go to state 21
    string                  go to state 22
    method                  go to state 23
    ready_parameters_list   go to state 24
    parameters_list         go to state 25
    parameters              go to state 26
    typevariable            go to state 27
    inttypevariable         go to state 28
    doubletypevariable      go to state 29
    chartypevariable        go to state 30
    floattypevariable       go to state 31
    typeparameter           go to state 32
    inttypeparameter        go to state 33
    doubletypeparameter     go to state 34
    chartypeparameter       go to state 35
    floattypeparameter      go to state 36
    name_recursive          go to state 37


state 2

    0 $accept: start $end .

    $default  accept


state 3

   23 print: SYSTEMTOK . DOT OUTTOK DOT PRINTLNTOK OPARENTHESES string EPARENTHESES DOTCOMMA

    DOT  shift, and go to state 38


state 4

   47 inttypevariable: INT . NAME DOTCOMMA
   55 inttypeparameter: INT . NAME

    NAME  shift, and go to state 39


state 5

   48 doubletypevariable: DOUBLE . NAME DOTCOMMA
   56 doubletypeparameter: DOUBLE . NAME

    NAME  shift, and go to state 40


state 6

   49 chartypevariable: CHAR . NAME DOTCOMMA
   57 chartypeparameter: CHAR . NAME

    NAME  shift, and go to state 41


state 7

   50 floattypevariable: FLOAT . NAME DOTCOMMA
   58 floattypeparameter: FLOAT . NAME

    NAME  shift, and go to state 42


state 8

   24 class: CLASS . NAMECLASS OBRACKET variables class_content EBRACKET

    NAMECLASS  shift, and go to state 43


state 9

   28 if_rule: IF . OPARENTHESES id COMPARATOR id EPARENTHESES OBRACKET if_content EBRACKET

    OPARENTHESES  shift, and go to state 44


state 10

   33 method_call: NAME . DOT NAME
   34            | NAME . DOT method_call
   37 method: NAME . ready_parameters_list
   42 parameters: NAME .
   59 name_recursive: NAME .

    DOT           shift, and go to state 45
    OPARENTHESES  shift, and go to state 13

    $end          reduce using rule 42 (parameters)
    $end          [reduce using rule 59 (name_recursive)]
    SYSTEMTOK     reduce using rule 42 (parameters)
    SYSTEMTOK     [reduce using rule 59 (name_recursive)]
    INT           reduce using rule 42 (parameters)
    INT           [reduce using rule 59 (name_recursive)]
    DOUBLE        reduce using rule 42 (parameters)
    DOUBLE        [reduce using rule 59 (name_recursive)]
    CHAR          reduce using rule 42 (parameters)
    CHAR          [reduce using rule 59 (name_recursive)]
    FLOAT         reduce using rule 42 (parameters)
    FLOAT         [reduce using rule 59 (name_recursive)]
    CLASS         reduce using rule 42 (parameters)
    CLASS         [reduce using rule 59 (name_recursive)]
    IF            reduce using rule 42 (parameters)
    IF            [reduce using rule 59 (name_recursive)]
    NAME          reduce using rule 42 (parameters)
    NAME          [reduce using rule 59 (name_recursive)]
    NAMECLASS     reduce using rule 42 (parameters)
    NAMECLASS     [reduce using rule 59 (name_recursive)]
    QUOTEDTEXT    reduce using rule 42 (parameters)
    QUOTEDTEXT    [reduce using rule 59 (name_recursive)]
    COMMA         reduce using rule 42 (parameters)
    COMMA         [reduce using rule 59 (name_recursive)]
    OPARENTHESES  [reduce using rule 42 (parameters)]
    OPARENTHESES  [reduce using rule 59 (name_recursive)]
    $default      reduce using rule 42 (parameters)

    ready_parameters_list  go to state 46


state 11

   21 object: NAMECLASS . NAME NEW NAMECLASS ready_parameters_list DOTCOMMA

    NAME  shift, and go to state 47


state 12

   35 string: QUOTEDTEXT .

    $default  reduce using rule 35 (string)


state 13

   38 ready_parameters_list: OPARENTHESES . parameters_list EPARENTHESES

    INT     shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    FLOAT   shift, and go to state 51
    NAME    shift, and go to state 52

    parameters_list      go to state 53
    parameters           go to state 54
    typeparameter        go to state 55
    inttypeparameter     go to state 33
    doubletypeparameter  go to state 34
    chartypeparameter    go to state 35
    floattypeparameter   go to state 36


state 14

    2 start: start list_object .
   20 list_object: list_object . object

    NAMECLASS  shift, and go to state 11

    NAMECLASS  [reduce using rule 2 (start)]
    $default   reduce using rule 2 (start)

    object  go to state 56


state 15

    3 start: start object .
   19 list_object: object .

    $end          reduce using rule 3 (start)
    $end          [reduce using rule 19 (list_object)]
    SYSTEMTOK     reduce using rule 3 (start)
    SYSTEMTOK     [reduce using rule 19 (list_object)]
    INT           reduce using rule 3 (start)
    INT           [reduce using rule 19 (list_object)]
    DOUBLE        reduce using rule 3 (start)
    DOUBLE        [reduce using rule 19 (list_object)]
    CHAR          reduce using rule 3 (start)
    CHAR          [reduce using rule 19 (list_object)]
    FLOAT         reduce using rule 3 (start)
    FLOAT         [reduce using rule 19 (list_object)]
    CLASS         reduce using rule 3 (start)
    CLASS         [reduce using rule 19 (list_object)]
    IF            reduce using rule 3 (start)
    IF            [reduce using rule 19 (list_object)]
    NAME          reduce using rule 3 (start)
    NAME          [reduce using rule 19 (list_object)]
    NAMECLASS     reduce using rule 3 (start)
    NAMECLASS     [reduce using rule 19 (list_object)]
    QUOTEDTEXT    reduce using rule 3 (start)
    QUOTEDTEXT    [reduce using rule 19 (list_object)]
    OPARENTHESES  reduce using rule 3 (start)
    OPARENTHESES  [reduce using rule 19 (list_object)]
    $default      reduce using rule 3 (start)


state 16

    4 start: start print .

    $default  reduce using rule 4 (start)


state 17

    5 start: start class .

    $default  reduce using rule 5 (start)


state 18

    6 start: start class_content .

    $default  reduce using rule 6 (start)


state 19

   10 start: start if_rule .

    $default  reduce using rule 10 (start)


state 20

    7 start: start parameters_method_call .

    $default  reduce using rule 7 (start)


state 21

    8 start: start method_call .
   32 parameters_method_call: method_call . ready_parameters_list

    OPARENTHESES  shift, and go to state 13

    OPARENTHESES  [reduce using rule 8 (start)]
    $default      reduce using rule 8 (start)

    ready_parameters_list  go to state 57


state 22

   18 start: start string .

    $default  reduce using rule 18 (start)


state 23

    9 start: start method .
   25 class_content: method .

    $end          reduce using rule 9 (start)
    $end          [reduce using rule 25 (class_content)]
    SYSTEMTOK     reduce using rule 9 (start)
    SYSTEMTOK     [reduce using rule 25 (class_content)]
    INT           reduce using rule 9 (start)
    INT           [reduce using rule 25 (class_content)]
    DOUBLE        reduce using rule 9 (start)
    DOUBLE        [reduce using rule 25 (class_content)]
    CHAR          reduce using rule 9 (start)
    CHAR          [reduce using rule 25 (class_content)]
    FLOAT         reduce using rule 9 (start)
    FLOAT         [reduce using rule 25 (class_content)]
    CLASS         reduce using rule 9 (start)
    CLASS         [reduce using rule 25 (class_content)]
    IF            reduce using rule 9 (start)
    IF            [reduce using rule 25 (class_content)]
    NAME          reduce using rule 9 (start)
    NAME          [reduce using rule 25 (class_content)]
    NAMECLASS     reduce using rule 9 (start)
    NAMECLASS     [reduce using rule 25 (class_content)]
    QUOTEDTEXT    reduce using rule 9 (start)
    QUOTEDTEXT    [reduce using rule 25 (class_content)]
    OPARENTHESES  reduce using rule 9 (start)
    OPARENTHESES  [reduce using rule 25 (class_content)]
    $default      reduce using rule 9 (start)


state 24

   11 start: start ready_parameters_list .

    $default  reduce using rule 11 (start)


state 25

   17 start: start parameters_list .
   40 parameters_list: parameters_list . COMMA parameters

    COMMA  shift, and go to state 58

    $default  reduce using rule 17 (start)


state 26

   16 start: start parameters .
   39 parameters_list: parameters .

    $end          reduce using rule 16 (start)
    $end          [reduce using rule 39 (parameters_list)]
    SYSTEMTOK     reduce using rule 16 (start)
    SYSTEMTOK     [reduce using rule 39 (parameters_list)]
    INT           reduce using rule 16 (start)
    INT           [reduce using rule 39 (parameters_list)]
    DOUBLE        reduce using rule 16 (start)
    DOUBLE        [reduce using rule 39 (parameters_list)]
    CHAR          reduce using rule 16 (start)
    CHAR          [reduce using rule 39 (parameters_list)]
    FLOAT         reduce using rule 16 (start)
    FLOAT         [reduce using rule 39 (parameters_list)]
    CLASS         reduce using rule 16 (start)
    CLASS         [reduce using rule 39 (parameters_list)]
    IF            reduce using rule 16 (start)
    IF            [reduce using rule 39 (parameters_list)]
    NAME          reduce using rule 16 (start)
    NAME          [reduce using rule 39 (parameters_list)]
    NAMECLASS     reduce using rule 16 (start)
    NAMECLASS     [reduce using rule 39 (parameters_list)]
    QUOTEDTEXT    reduce using rule 16 (start)
    QUOTEDTEXT    [reduce using rule 39 (parameters_list)]
    COMMA         reduce using rule 39 (parameters_list)
    OPARENTHESES  reduce using rule 16 (start)
    OPARENTHESES  [reduce using rule 39 (parameters_list)]
    $default      reduce using rule 16 (start)


state 27

   12 start: start typevariable .

    $default  reduce using rule 12 (start)


state 28

   43 typevariable: inttypevariable .

    $default  reduce using rule 43 (typevariable)


state 29

   44 typevariable: doubletypevariable .

    $default  reduce using rule 44 (typevariable)


state 30

   45 typevariable: chartypevariable .

    $default  reduce using rule 45 (typevariable)


state 31

   46 typevariable: floattypevariable .

    $default  reduce using rule 46 (typevariable)


state 32

   13 start: start typeparameter .
   15      | start typeparameter .
   36 method: typeparameter . ready_parameters_list OBRACKET object if_rule EBRACKET
   41 parameters: typeparameter .

    OPARENTHESES  shift, and go to state 13

    $end          reduce using rule 13 (start)
    $end          [reduce using rule 15 (start)]
    $end          [reduce using rule 41 (parameters)]
    SYSTEMTOK     reduce using rule 13 (start)
    SYSTEMTOK     [reduce using rule 15 (start)]
    SYSTEMTOK     [reduce using rule 41 (parameters)]
    INT           reduce using rule 13 (start)
    INT           [reduce using rule 15 (start)]
    INT           [reduce using rule 41 (parameters)]
    DOUBLE        reduce using rule 13 (start)
    DOUBLE        [reduce using rule 15 (start)]
    DOUBLE        [reduce using rule 41 (parameters)]
    CHAR          reduce using rule 13 (start)
    CHAR          [reduce using rule 15 (start)]
    CHAR          [reduce using rule 41 (parameters)]
    FLOAT         reduce using rule 13 (start)
    FLOAT         [reduce using rule 15 (start)]
    FLOAT         [reduce using rule 41 (parameters)]
    CLASS         reduce using rule 13 (start)
    CLASS         [reduce using rule 15 (start)]
    CLASS         [reduce using rule 41 (parameters)]
    IF            reduce using rule 13 (start)
    IF            [reduce using rule 15 (start)]
    IF            [reduce using rule 41 (parameters)]
    NAME          reduce using rule 13 (start)
    NAME          [reduce using rule 15 (start)]
    NAME          [reduce using rule 41 (parameters)]
    NAMECLASS     reduce using rule 13 (start)
    NAMECLASS     [reduce using rule 15 (start)]
    NAMECLASS     [reduce using rule 41 (parameters)]
    QUOTEDTEXT    reduce using rule 13 (start)
    QUOTEDTEXT    [reduce using rule 15 (start)]
    QUOTEDTEXT    [reduce using rule 41 (parameters)]
    COMMA         reduce using rule 41 (parameters)
    OPARENTHESES  [reduce using rule 13 (start)]
    OPARENTHESES  [reduce using rule 15 (start)]
    OPARENTHESES  [reduce using rule 41 (parameters)]
    $default      reduce using rule 13 (start)

    ready_parameters_list  go to state 59


state 33

   51 typeparameter: inttypeparameter .

    $default  reduce using rule 51 (typeparameter)


state 34

   52 typeparameter: doubletypeparameter .

    $default  reduce using rule 52 (typeparameter)


state 35

   53 typeparameter: chartypeparameter .

    $default  reduce using rule 53 (typeparameter)


state 36

   54 typeparameter: floattypeparameter .

    $default  reduce using rule 54 (typeparameter)


state 37

   14 start: start name_recursive .
   60 name_recursive: name_recursive . COMMA NAME

    COMMA  shift, and go to state 60

    $default  reduce using rule 14 (start)


state 38

   23 print: SYSTEMTOK DOT . OUTTOK DOT PRINTLNTOK OPARENTHESES string EPARENTHESES DOTCOMMA

    OUTTOK  shift, and go to state 61


state 39

   47 inttypevariable: INT NAME . DOTCOMMA
   55 inttypeparameter: INT NAME .

    DOTCOMMA  shift, and go to state 62

    $default  reduce using rule 55 (inttypeparameter)


state 40

   48 doubletypevariable: DOUBLE NAME . DOTCOMMA
   56 doubletypeparameter: DOUBLE NAME .

    DOTCOMMA  shift, and go to state 63

    $default  reduce using rule 56 (doubletypeparameter)


state 41

   49 chartypevariable: CHAR NAME . DOTCOMMA
   57 chartypeparameter: CHAR NAME .

    DOTCOMMA  shift, and go to state 64

    $default  reduce using rule 57 (chartypeparameter)


state 42

   50 floattypevariable: FLOAT NAME . DOTCOMMA
   58 floattypeparameter: FLOAT NAME .

    DOTCOMMA  shift, and go to state 65

    $default  reduce using rule 58 (floattypeparameter)


state 43

   24 class: CLASS NAMECLASS . OBRACKET variables class_content EBRACKET

    OBRACKET  shift, and go to state 66


state 44

   28 if_rule: IF OPARENTHESES . id COMPARATOR id EPARENTHESES OBRACKET if_content EBRACKET

    NUMBER  shift, and go to state 67
    NAME    shift, and go to state 68

    id  go to state 69


state 45

   33 method_call: NAME DOT . NAME
   34            | NAME DOT . method_call

    NAME  shift, and go to state 70

    method_call  go to state 71


state 46

   37 method: NAME ready_parameters_list .

    $default  reduce using rule 37 (method)


state 47

   21 object: NAMECLASS NAME . NEW NAMECLASS ready_parameters_list DOTCOMMA

    NEW  shift, and go to state 72


state 48

   55 inttypeparameter: INT . NAME

    NAME  shift, and go to state 73


state 49

   56 doubletypeparameter: DOUBLE . NAME

    NAME  shift, and go to state 74


state 50

   57 chartypeparameter: CHAR . NAME

    NAME  shift, and go to state 75


state 51

   58 floattypeparameter: FLOAT . NAME

    NAME  shift, and go to state 76


state 52

   42 parameters: NAME .

    $default  reduce using rule 42 (parameters)


state 53

   38 ready_parameters_list: OPARENTHESES parameters_list . EPARENTHESES
   40 parameters_list: parameters_list . COMMA parameters

    COMMA         shift, and go to state 58
    EPARENTHESES  shift, and go to state 77


state 54

   39 parameters_list: parameters .

    $default  reduce using rule 39 (parameters_list)


state 55

   41 parameters: typeparameter .

    $default  reduce using rule 41 (parameters)


state 56

   20 list_object: list_object object .

    $default  reduce using rule 20 (list_object)


state 57

   32 parameters_method_call: method_call ready_parameters_list .

    $default  reduce using rule 32 (parameters_method_call)


state 58

   40 parameters_list: parameters_list COMMA . parameters

    INT     shift, and go to state 48
    DOUBLE  shift, and go to state 49
    CHAR    shift, and go to state 50
    FLOAT   shift, and go to state 51
    NAME    shift, and go to state 52

    parameters           go to state 78
    typeparameter        go to state 55
    inttypeparameter     go to state 33
    doubletypeparameter  go to state 34
    chartypeparameter    go to state 35
    floattypeparameter   go to state 36


state 59

   36 method: typeparameter ready_parameters_list . OBRACKET object if_rule EBRACKET

    OBRACKET  shift, and go to state 79


state 60

   60 name_recursive: name_recursive COMMA . NAME

    NAME  shift, and go to state 80


state 61

   23 print: SYSTEMTOK DOT OUTTOK . DOT PRINTLNTOK OPARENTHESES string EPARENTHESES DOTCOMMA

    DOT  shift, and go to state 81


state 62

   47 inttypevariable: INT NAME DOTCOMMA .

    $default  reduce using rule 47 (inttypevariable)


state 63

   48 doubletypevariable: DOUBLE NAME DOTCOMMA .

    $default  reduce using rule 48 (doubletypevariable)


state 64

   49 chartypevariable: CHAR NAME DOTCOMMA .

    $default  reduce using rule 49 (chartypevariable)


state 65

   50 floattypevariable: FLOAT NAME DOTCOMMA .

    $default  reduce using rule 50 (floattypevariable)


state 66

   24 class: CLASS NAMECLASS OBRACKET . variables class_content EBRACKET

    INT     shift, and go to state 82
    DOUBLE  shift, and go to state 83
    CHAR    shift, and go to state 84
    FLOAT   shift, and go to state 85

    variables           go to state 86
    typevariable        go to state 87
    inttypevariable     go to state 28
    doubletypevariable  go to state 29
    chartypevariable    go to state 30
    floattypevariable   go to state 31


state 67

   31 id: NUMBER .

    $default  reduce using rule 31 (id)


state 68

   30 id: NAME .

    $default  reduce using rule 30 (id)


state 69

   28 if_rule: IF OPARENTHESES id . COMPARATOR id EPARENTHESES OBRACKET if_content EBRACKET

    COMPARATOR  shift, and go to state 88


state 70

   33 method_call: NAME . DOT NAME
   33            | NAME DOT NAME .
   34            | NAME . DOT method_call

    DOT  shift, and go to state 45

    $default  reduce using rule 33 (method_call)


state 71

   34 method_call: NAME DOT method_call .

    $default  reduce using rule 34 (method_call)


state 72

   21 object: NAMECLASS NAME NEW . NAMECLASS ready_parameters_list DOTCOMMA

    NAMECLASS  shift, and go to state 89


state 73

   55 inttypeparameter: INT NAME .

    $default  reduce using rule 55 (inttypeparameter)


state 74

   56 doubletypeparameter: DOUBLE NAME .

    $default  reduce using rule 56 (doubletypeparameter)


state 75

   57 chartypeparameter: CHAR NAME .

    $default  reduce using rule 57 (chartypeparameter)


state 76

   58 floattypeparameter: FLOAT NAME .

    $default  reduce using rule 58 (floattypeparameter)


state 77

   38 ready_parameters_list: OPARENTHESES parameters_list EPARENTHESES .

    $default  reduce using rule 38 (ready_parameters_list)


state 78

   40 parameters_list: parameters_list COMMA parameters .

    $default  reduce using rule 40 (parameters_list)


state 79

   36 method: typeparameter ready_parameters_list OBRACKET . object if_rule EBRACKET

    NAMECLASS  shift, and go to state 11

    object  go to state 90


state 80

   60 name_recursive: name_recursive COMMA NAME .

    $default  reduce using rule 60 (name_recursive)


state 81

   23 print: SYSTEMTOK DOT OUTTOK DOT . PRINTLNTOK OPARENTHESES string EPARENTHESES DOTCOMMA

    PRINTLNTOK  shift, and go to state 91


state 82

   47 inttypevariable: INT . NAME DOTCOMMA

    NAME  shift, and go to state 92


state 83

   48 doubletypevariable: DOUBLE . NAME DOTCOMMA

    NAME  shift, and go to state 93


state 84

   49 chartypevariable: CHAR . NAME DOTCOMMA

    NAME  shift, and go to state 94


state 85

   50 floattypevariable: FLOAT . NAME DOTCOMMA

    NAME  shift, and go to state 95


state 86

   24 class: CLASS NAMECLASS OBRACKET variables . class_content EBRACKET
   27 variables: variables . typevariable

    INT     shift, and go to state 4
    DOUBLE  shift, and go to state 5
    CHAR    shift, and go to state 6
    FLOAT   shift, and go to state 7
    NAME    shift, and go to state 96

    class_content        go to state 97
    method               go to state 98
    typevariable         go to state 99
    inttypevariable      go to state 28
    doubletypevariable   go to state 29
    chartypevariable     go to state 30
    floattypevariable    go to state 31
    typeparameter        go to state 100
    inttypeparameter     go to state 33
    doubletypeparameter  go to state 34
    chartypeparameter    go to state 35
    floattypeparameter   go to state 36


state 87

   26 variables: typevariable .

    $default  reduce using rule 26 (variables)


state 88

   28 if_rule: IF OPARENTHESES id COMPARATOR . id EPARENTHESES OBRACKET if_content EBRACKET

    NUMBER  shift, and go to state 67
    NAME    shift, and go to state 68

    id  go to state 101


state 89

   21 object: NAMECLASS NAME NEW NAMECLASS . ready_parameters_list DOTCOMMA

    OPARENTHESES  shift, and go to state 13

    ready_parameters_list  go to state 102


state 90

   36 method: typeparameter ready_parameters_list OBRACKET object . if_rule EBRACKET

    IF  shift, and go to state 9

    if_rule  go to state 103


state 91

   23 print: SYSTEMTOK DOT OUTTOK DOT PRINTLNTOK . OPARENTHESES string EPARENTHESES DOTCOMMA

    OPARENTHESES  shift, and go to state 104


state 92

   47 inttypevariable: INT NAME . DOTCOMMA

    DOTCOMMA  shift, and go to state 62


state 93

   48 doubletypevariable: DOUBLE NAME . DOTCOMMA

    DOTCOMMA  shift, and go to state 63


state 94

   49 chartypevariable: CHAR NAME . DOTCOMMA

    DOTCOMMA  shift, and go to state 64


state 95

   50 floattypevariable: FLOAT NAME . DOTCOMMA

    DOTCOMMA  shift, and go to state 65


state 96

   37 method: NAME . ready_parameters_list

    OPARENTHESES  shift, and go to state 13

    ready_parameters_list  go to state 46


state 97

   24 class: CLASS NAMECLASS OBRACKET variables class_content . EBRACKET

    EBRACKET  shift, and go to state 105


state 98

   25 class_content: method .

    $default  reduce using rule 25 (class_content)


state 99

   27 variables: variables typevariable .

    $default  reduce using rule 27 (variables)


state 100

   36 method: typeparameter . ready_parameters_list OBRACKET object if_rule EBRACKET

    OPARENTHESES  shift, and go to state 13

    ready_parameters_list  go to state 59


state 101

   28 if_rule: IF OPARENTHESES id COMPARATOR id . EPARENTHESES OBRACKET if_content EBRACKET

    EPARENTHESES  shift, and go to state 106


state 102

   21 object: NAMECLASS NAME NEW NAMECLASS ready_parameters_list . DOTCOMMA

    DOTCOMMA  shift, and go to state 107


state 103

   36 method: typeparameter ready_parameters_list OBRACKET object if_rule . EBRACKET

    EBRACKET  shift, and go to state 108


state 104

   23 print: SYSTEMTOK DOT OUTTOK DOT PRINTLNTOK OPARENTHESES . string EPARENTHESES DOTCOMMA

    QUOTEDTEXT  shift, and go to state 12

    string  go to state 109


state 105

   24 class: CLASS NAMECLASS OBRACKET variables class_content EBRACKET .

    $default  reduce using rule 24 (class)


state 106

   28 if_rule: IF OPARENTHESES id COMPARATOR id EPARENTHESES . OBRACKET if_content EBRACKET

    OBRACKET  shift, and go to state 110


state 107

   21 object: NAMECLASS NAME NEW NAMECLASS ready_parameters_list DOTCOMMA .

    $default  reduce using rule 21 (object)


state 108

   36 method: typeparameter ready_parameters_list OBRACKET object if_rule EBRACKET .

    $default  reduce using rule 36 (method)


state 109

   23 print: SYSTEMTOK DOT OUTTOK DOT PRINTLNTOK OPARENTHESES string . EPARENTHESES DOTCOMMA

    EPARENTHESES  shift, and go to state 111


state 110

   28 if_rule: IF OPARENTHESES id COMPARATOR id EPARENTHESES OBRACKET . if_content EBRACKET

    SYSTEMTOK  shift, and go to state 3

    $default  reduce using rule 22 (print)

    print       go to state 112
    if_content  go to state 113


state 111

   23 print: SYSTEMTOK DOT OUTTOK DOT PRINTLNTOK OPARENTHESES string EPARENTHESES . DOTCOMMA

    DOTCOMMA  shift, and go to state 114


state 112

   29 if_content: print .

    $default  reduce using rule 29 (if_content)


state 113

   28 if_rule: IF OPARENTHESES id COMPARATOR id EPARENTHESES OBRACKET if_content . EBRACKET

    EBRACKET  shift, and go to state 115


state 114

   23 print: SYSTEMTOK DOT OUTTOK DOT PRINTLNTOK OPARENTHESES string EPARENTHESES DOTCOMMA .

    $default  reduce using rule 23 (print)


state 115

   28 if_rule: IF OPARENTHESES id COMPARATOR id EPARENTHESES OBRACKET if_content EBRACKET .

    $default  reduce using rule 28 (if_rule)
